src/bp-templates/bp-nouveau/css/buddypress.css
/* ... */
div#buddypress .bb-album-actions .button.error.outline {
  background: none;
  color: #ef3e46;
  border-color: #ef3e46;
}

.bb-member-albums-items {
  list-style: none;
  margin: 0;
}

.bb-member-albums-items > li:not(:last-child) {
  border-bottom: 1px solid #eef0f3;
  padding-bottom: 30px;
  margin-bottom: 30px;
}

ul.bb-albums-list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  list-style: none;
  overflow: hidden;
  margin: 0 -5px;
}

ul.bb-albums-list li {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 25%;
  flex: 0 0 25%;
  max-width: 25%;
  min-width: 0;
  padding: 5px;
}

ul.bb-albums-list a {
  position: relative;
  overflow: hidden;
  padding-top: 100%;
  display: block;
  background: #809ab4;
}

ul.bb-albums-list img {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  z-index: 0;
  min-height: 100%;
  width: auto;
  min-width: 100%;
  object-fit: cover;
}

ul.bb-albums-list .bb-more-photos {
  font-size: 14px;
  font-weight: 300;
  color: #939597;
  letter-spacing: -0.24px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  display: flex;
  align-items: center;
  flex-flow: column;
  justify-content: center;
}

ul.bb-albums-list .bb-more-photos strong {
  line-height: 1;
  font-size: 24px;
  color: #4d5c6d;
  letter-spacing: -0.24px;
  text-align: center;
  font-weight: 400;
}

.bb-album-list-item .bs-cover-wrap {
  border-radius: 0;
  padding-top: 93.52%;
}

.bb-album-list-item .bs-cover-wrap:after {
  content: " ";
  position: absolute;
  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 60%, rgba(0, 0, 0, 0) 100%);
  border-radius: 3px;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.bb-album-cover-wrap {
  position: relative;
}

.bb-album-cover-wrap h4 {
  font-size: 20px;
  color: inherit;
  letter-spacing: -0.24px;
  line-height: 1;
  margin: 0 0 12px;
}

.bb-album-cover-wrap .bb-album-content-wrap {
  position: absolute;
  bottom: 0;
  z-index: 11;
  left: 0;
  padding: 25px;
  font-size: 13px;
  color: #fff;
  letter-spacing: -0.24px;
  line-height: 1;
  width: 100%;
}

#buddypress .bb-album-content-wrap h4 {
  margin-bottom: 12px;
}

.bbm-uploader-model-wrap .dropzone .dz-remove:after {
  top: -6px;
}

@media (min-width: 768px) {
  .bb-media-model-inner {
    max-height: 90vh;
    min-height: 90vh;
  }
  .bb-media-section {
    flex: 1;
    min-width: 0;
  }
  .bb-media-info-section {
    flex: 0 0 376px;
    min-width: 0;
  }
}

@media (max-width: 767px) {
  a.bb-close-model {
    top: 10px;
    right: 10px;
  }
}

@media (max-width: 1000px) {
  .bb-album-cover-wrap .bb-album-content-wrap {
    font-size: 11px;
    padding: 15px;
  }
  .bb-album-cover-wrap h4 {
    font-size: 18px;
  }
  ul.bb-albums-list .bb-more-photos {
    font-size: 10px;
  }
  ul.bb-albums-list .bb-more-photos strong {
    font-size: 20px;
  }
  .buddypress-wrap .bp-list.bb-photo-list li {
    flex: 0 0 25%;
  }
}

@media (max-width: 580px) {
  ul.bb-albums-list li {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
    min-width: 0;
  }
  .bb-album-list-item .bs-cover-wrap {
    padding-top: 95.52%;
  }
  .buddypress-wrap .bp-list.bb-photo-list li {
    flex: 0 0 50%;
  }
}

.bb-custom-check {
  position: absolute;
  opacity: 0;
}

.bb-custom-check + label {
  color: #fff;
  position: relative;
  cursor: pointer;
  padding: 0;
}

.bb-custom-check:checked + label {
  color: #fff;
}

#media_uploader.dropzone .bb-dz-preview-wrap .dz-image img {
  cursor: default;
}

.bb-dropzone-wrap.bb-has-items .dz-default {
  display: none !important;
}

.bb-dropzone-wrap.bb-has-items {
  margin: -8px;
}

.bb-dropzone-wrap.bb-has-items .dz-preview {
  margin: 8px;
  width: calc(20% - 16px);
}

.bb-model-footer .button {
  min-width: 130px;
}

.bbm-uploader-model-wrap .bb-model-header h4 {
  font-size: 22px;
}

.bbm-uploader-model-wrap .bb-model-header span {
  font-size: 1rem;
  color: #939597;
  letter-spacing: -0.24px;
  line-height: 24px;
  margin-right: 15px;
}

.bbm-uploader-model-wrap .bb-model-header .dashicons {
  font-size: 22px;
  margin: 0;
}

.bb-media-actions-wrap {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 15px 0;
}

.bb-media-actions-wrap h2 {
  margin: 0;
}

.bb-add-media {
  display: inline-block;
}

.emojionearea.emojionearea-standalone {
  vertical-align: top;
}

.webui-popover.webui-popover {
  z-index: 999991;
}

.text-center {
  text-align: center;
}

.modal-container .bp-existing-media-wrap {
  margin-bottom: 20px;
  max-height: 68vh;
  overflow: auto;
}

.bb-model-close-button .dashicons {
  font-size: 22px;
}

.bb-field-wrap,
.bb-dropdown-wrap {
  margin-bottom: 20px;
}

.bp-media-upload-tab {
  margin-right: 15px;
}

#buddypress ul.bp-list.loading,
#bbpress-forums ul.bp-list.loading {
  background: #fff;
  padding: 20px;
  text-align: center;
}

.bb-media-model-inner .gif-media-search-dropdown.open {
  width: 300px;
  left: -60px;
}

.bb-media-model-inner .gif-media-search-dropdown:before {
  left: 80px;
}

.bb-media-model-inner .emojionearea .emojionearea-picker.emojionearea-picker-position-bottom {
  left: -100px;
}

.bb-media-model-inner .emojionearea .emojionearea-picker.emojionearea-picker-position-bottom .emojionearea-wrapper:after {
  left: 102px;
}

img.emoji,
img.emojioneemoji {
  display: inline-block;
  margin: 3px;
  width: 24px !important;
  height: 24px !important;
}

/**
*-------------------------------------------------------------------------------
* @section 15.0 - Media Dropzone
*-------------------------------------------------------------------------------
*/
.dropzone,
.dropzone * {
  box-sizing: border-box;
}
/* ... */

